--- a/src/constants/style.css
+++ b/src/constants/style.css
@@ -1,4 +1,4 @@
 .highlight {
-  color: red; /* Change this to the desired color */
+  color: rgb(178, 126, 126); /* Change this to the desired color */
   font-weight: bold; /* Change this to the desired font weight */
 }
